# Flet-Widgets-Library

./: .gitignore  README.md  pyproject.toml
src/: Demo-AnimatedLists.py  Demo-BasicButton.py  Demo-BubbleText.py  Demo-CircleCard.py  Demo-Example.py  Demo-ImageSlider.py  Demo-OauthProvidersButtons.py  Demo-RestrictedInput.py  Demo-RotatingText.py  Demo-SplitText.py  Demo-Stepper.py  Demo-TextFader.py  Demo-TreeView.py  Demo-TypeWriter.py
src/FletWidgetsLibrary/: __init__.py
src/FletWidgetsLibrary/AnimatedComponents/: AnimatedLists.py  BubbleText.py  CircleCard.py  ImageSlider.py  RotatingText.py  SplitText.py  TextFader.py  TypeWriter.py  __init__.py
src/FletWidgetsLibrary/BasicComponents/: BasicButton.py  RestrictedInput.py  Stepper.py  TreeView.py  __init__.py
src/FletWidgetsLibrary/In_Testing/Steper/: Steper.py  Stepper.py  main.py
src/FletWidgetsLibrary/In_Testing/TreeView/: TreeView.py
src/FletWidgetsLibrary/In_Testing/TreeView/test/: Treevieww.py  main.py
src/FletWidgetsLibrary/OauthProvidersButtons/: AmazonButton.py  AppleButton.py  CupertinoAmazonButton.py  CupertinoAppleButton.py  CupertinoGithubButton.py  CupertinoGoogleButton.py  CupertinoInstagramButton.py  CupertinoLinkedinButton.py  CupertinoMicrosoftButton.py  CupertinoOauthProviderButton.py  GithubButton.py  GoogleButton.py  LinkedinButton.py  MicrosoftButton.py  OauthProviderButton.py  __init__.py
src/FletWidgetsLibrary/Resources/: IconsBase64.py  __init__.py
